2005-07-19  Dan Winship  <danw@novell.com>

	* generator/Parameters.cs: Remove the AllowComplexRefs flag.
	(They're always allowed now.)

	* generator/Signal.cs (GenVirtualMethod): Fix up the use of CSType
	vs MarshalType in the ref/out-handling code so that this can
	marshal any type.

2005-07-18  Dan Winship  <danw@novell.com>

	* parser/gapi2xml.pl: Change a few instances of
	"last if ($line =~ /^}/);" to
	"last if ($line =~ /^(deprecated)?}/);" to prevent runaway
	parsing (in particular in libgnomeui).

	* sources/gtk-sharp-2.4-sources.xml: 
	* sources/gtk-sharp-2.6-sources.xml: exclude a handful of
	libgnomeui files that were omitted in gtk# 1.0 due to the parser
	bug, but which are entirely deprecated anyway. (Some of them
	showed up in earlier 1.9/2.4/2.6 releases but are going away again
	now.)

	* gnome/gnome-api.raw: Regen

	* gnome/Gnome.metadata: Hide a few more things that should be
	hidden, remove a few rules that aren't needed any more. Keeping
	hiding GnomeIconTheme though and using the old by-hand IconTheme
	for the moment, since the by-hand one isn't compatible with the
	autogenerated one.

	* gnome/IconData.cs: kill this, use the autogenerated version

2005-07-13  Dan Winship  <danw@novell.com>

	* sources/gtk-sharp-2.4-sources.xml: 
	* sources/gtk-sharp-2.6-sources.xml: remove some gnome-vfs files:
	gnome-vfs-method and gnome-vfs-transform, because they're
	internal/part of the module API, and gnome-vfs-file-size.h,
	because it's generated and shouldn't be in the source tarball (and
	we don't parse it right anyway).

	* gnomevfs/gnome-vfs-api.raw: Regen

	* gnomevfs/gnomevfs-symbols.xml: add GnomeVFSFileOffset

	* gnomevfs/Gnomevfs.metadata: remove a whole bunch of callback
	types that are only used from methods and structs that we hide.
	
2005-07-08  Mike Kestner  <mkestner@novell.com>

	* */*.raw : regen.
	* parser/gapi2xml.pl : access comment doesn't have to start at
	beginning of line.

2005-07-08  Mike Kestner  <mkestner@novell.com>
