@@ -539,5 +539,21 @@ class TreeSelectionSample
         <since version="Gtk# 2.4" />
       </Docs>
     </Member>
+  <Member MemberName="GetSelected">
+      <MemberSignature Language="C#" Value="public bool GetSelected (out Gtk.TreeIter iter);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="iter" Type="Gtk.TreeIter&amp;" RefType="out" />
+      </Parameters>
+      <Docs>
+        <param name="iter">The position that was selected.</param>
+        <summary>Gets information about the currently selected node.</summary>
+        <returns><see langword="true" /> if a row is selected.</returns>
+        <remarks>This convenience method doesnt require an out <see cref="Gtk.TreeModel" />. It is useful in the case that you already have a copy of the TreeModel.</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
