@@ -1,3 +1,10 @@
+2005-07-19  Todd Berman  <tberman@off.net>
+
+	* gtk/TreeSelection.custom: Add an overload for GetSelected to remove
+	the need to always pass in that damn TreeModel.
+	* doc/en/Gtk/TreeSelection.xml: Add documentation for the new
+	overload.
+
 2005-07-19  Dan Winship  <danw@novell.com>
 
 	* generator/Parameters.cs: Remove the AllowComplexRefs flag.
